<resources>
    <string name="app_name">Hot-Yongmin</string>
    <string name="sopt">SOPT</string>
    <string name="id">아이디</string>
    <string name="id_hint">아이디를 입력해주세요</string>
    <string name="pw">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
    <string name="login">LOGIN</string>
    <string name="signup">회원가입</string>
    <string name="signup_complete">회원가입 완료</string>
    <string name="name">이름</string>
    <string name="name_hint">이름을 입력해주세요.</string>
    <string name="description">안녕하세요 저는 30기 더 솝트 안드로이드 파트 OB 권용민입니다.\n저는 축구, 사진, 음악감상을 좋아합니다. 요즘은 특히 힙합음악에 빠져있지만 다른 장르도 좋아합니다.\n\n스크롤뷰 테스트\n스크롤뷰 테스트\n스크롤뷰 테스트\n스크롤뷰 테스트\n스크롤뷰 테스트\n스크롤뷰 테스트\n스크롤뷰 테스트\n스크롤뷰 테스트\n스크롤뷰 테스트\n스크롤뷰 테스트\n</string>
    <string name="follower_list">팔로워\n목록</string>
    <string name="repo_list">레포지토리\n목록</string>
    <string name="github">GitHub</string>
    <string name="follower">FOLLWER</string>
    <string name="following">FOLLOWING</string>
    <string name="upload_image">이미지 업로드</string>
    <string name="title_camera">프로필 사진\n업로드</string>
    <string name="onboarding1">GitHub에 오신걸 환영합니다!</string>
    <string name="onboarding2">GitHub에서 즐거운 시간 보내시길 바랍니다!</string>
    <string name="onboarding3">GitHub를 시작해봅시다!</string>
    <string name="check_signup">아직 회원가입하지 않으셨나요?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>